--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600&family=Noto+Sans+JP:wght@300;400;500;700&family=Noto+Serif+JP:wght@400;600;700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="olive.css">
-    <script defer src="main.js"></script>
+    <link rel="stylesheet" href="index.css">
+    <script defer src="index.js"></script>
   </head>
   <body>
     <header class="site-header" data-scrolled="false">
