--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="description" content="愛犬と過ごす特別な時間。上質な空間とこだわりのコーヒー、季節のスイーツを楽しめる高級ドッグカフェ。">
     <meta name="theme-color" content="#0f0f10">
     <meta property="og:type" content="website">
-    <meta property="og:title" content="Le Chien Café | ドッグカフェ">
+    <meta property="og:title" content="Dog Cafe Olive">
     <meta property="og:description" content="愛犬と過ごす特別な時間。上質な空間とこだわりのコーヒー、季節のスイーツを楽しめる高級ドッグカフェ。">
     <meta property="og:image" content="">
     <link rel="preconnect" href="https://fonts.googleapis.com">
