--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
   <body>
     <header class="site-header" data-scrolled="false">
       <div class="container header-inner">
-        <a href="#" class="logo" aria-label="Le Chien Café">Dog Cafe Olive</a>
+        <a href="#" class="logo" aria-label="Dog Cafe Olive">Dog Cafe Olive</a>
         <nav class="site-nav" aria-label="メインメニュー">
           <ul>
             <li><a href="#concept">コンセプト</a></li>
